--- a/christmas_math.html
+++ b/christmas_math.html
@@ -6,7 +6,10 @@
     <title>Geometry Tree - Folded</title>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="css/style.css">      <link rel="stylesheet" href="css/math_tree.css">  </head>
+    <link rel="stylesheet" href="css/style.css">      
+    <link rel="stylesheet" href="css/math_tree.css">
+    
+</head>
 <body>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #333; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
 
