--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             </div>
         </a>
 
+        <a href="christmas_3d.html" class="card" style="border-color: #f1c40f;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">✨🧊</div> 
+                <h2>Hệ Không Gian 3D</h2>
+                <p>Cây thông vòi rồng ánh sáng xoay chiều.</p>
+            </div>
+        </a>
+
     </div>
 
 </body>
