Update Defeat and Victory game

--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
             </div>
         </a>
 
+        <a href="christmas_love.html" class="card" style="border-color: #ff1744;">
+            <div class="card-content">
+                <div class="icon">💖</div>
+                <h2>Hệ Tình Yêu</h2>
+                <p>Cây thông tương tác ánh sáng.</p>
+            </div>
+        </a>
+
+        <a href="christmas_moba.html" class="card" style="border-color: #e74c3c;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 4rem;">🛡️💀</div> 
+                <h2>Hệ Game Thủ</h2>
+                <p>Cây thông "Defeat" & Ngôi sao Rank Đồng.</p>
+            </div>
+        </a>
+
+        <a href="christmas_moba_victory.html" class="card" style="border-color: #f1c40f;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 4rem;">🏆⚔️</div> 
+                <h2>Hệ Chiến Thắng</h2>
+                <p>Cây thông "Victory" & Ngôi sao Cao Thủ.</p>
+            </div>
+        </a>
+
     </div>
 
 </body>
