Update game gacha page

--- a/christmas_math.html
+++ b/christmas_math.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometry Tree - Folded</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/style.css">      
     <link rel="stylesheet" href="css/math_tree.css">
@@ -66,5 +66,7 @@
 
     <div id="math-wish-content" class="math-wish"></div>
 
-    <script src="js/script.js"></script>     <script src="js/math_tree.js"></script>  </body>
+    <script src="js/script.js"></script>     
+    <script src="js/math_tree.js"></script>  
+</body>
 </html>
