--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
             </div>
         </a>
 
+        <a href="christmas_gacha.html" class="card" style="border-color: #d63384;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 4rem;">💎💳</div> 
+                <h2>Hệ Gacha</h2>
+                <p>Cây thông 118 vật phẩm & Ngôi sao Bank Card.</p>
+            </div>
+        </a>
+
     </div>
+
+    <script src="js/script.js"></script>
 
 </body>
 </html>
