Update write name, christmas card

--- a/christmas_gacha.html
+++ b/christmas_gacha.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/gacha_tree.css">
 </head>
 <body>
+    <div id="snow-container"></div>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
 
     <div class="main-container">
