--- a/christmas_3d.html
+++ b/christmas_3d.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/tree_3d.css">    
 </head>
 <body>
+    <div id="snow-container"></div>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #f1c40f; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
 
     <div class="wish-3d">Merry Christmas & Happy New Year!</div>
