--- a/christmas_chem_table.html
+++ b/christmas_chem_table.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/chem_table.css"> 
 </head>
 <body>
+    <div id="snow-container"></div>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: white; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
 
     <div class="tree-container-chem">
