--- a/christmas_math.html
+++ b/christmas_math.html
@@ -11,6 +11,7 @@
     
 </head>
 <body>
+    <div id="snow-container"></div>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #333; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
 
     <svg viewBox="0 0 500 600">
