--- a/christmas_moba_victory.html
+++ b/christmas_moba_victory.html
@@ -9,6 +9,7 @@
 </head>
 <body class="victory-mode"> <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
 
+    <div id="snow-container"></div>
     <div class="main-container">
         <h1 class="moba-title" style="color: #f1c40f; text-shadow: 0 0 10px #f1c40f;">LEGENDARY CHRISTMAS!</h1>
         
