--- a/christmas_std.html
+++ b/christmas_std.html
@@ -6,7 +6,6 @@
     <title>Christmas Card</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/music.css">
     <style>
         /* CSS riêng cho trang này */
         body {
@@ -82,6 +81,7 @@
 </head>
 <body>
 
+    <div id="snow-container"></div>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: white; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
 
     <div class="tree-container">
@@ -97,6 +97,5 @@
     </div>
 
     <script src="js/script.js"></script>
-    <script src="js/music.js"></script>
 </body>
 </html>
