--- a/start.html
+++ b/start.html
@@ -12,11 +12,10 @@
             padding: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden; /* Ẩn thanh cuộn của trang mẹ */
+            overflow: hidden;
             background-color: #000;
         }
 
-        /* Khung hiển thị nội dung các trang con */
         iframe {
             width: 100%;
             height: 100%;
@@ -27,7 +26,9 @@
 </head>
 <body>
 
-    <iframe src="index.html" name="content-frame" title="Main Content"></iframe>
+    <div id="snow-container"></div>
+    
+    <iframe src="welcome.html" name="content-frame" title="Main Content"></iframe>
 
     <script src="js/music.js"></script>
 
