Update 6 remains choices

--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Bộ Sưu Tập Giáng Sinh</title>
     <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
     <div id="snow-container"></div>
     
-    <div style="text-align: center; margin-bottom: 20px;">
-        <a href="card.html" style="color: #fff; text-decoration: none; font-size: 1.2rem; background: rgba(255,255,255,0.1); padding: 8px 15px; border-radius: 20px; border: 1px solid #d4af37;">
-            📖 Xem lại thiệp chúc
-        </a>
-    </div>
-
     <h1 id="greeting">🎄 Chọn Loại Cây Thông 🎄</h1>    
     
     <div class="grid-container">
@@ -73,6 +67,66 @@
                 <h2>Hệ Gacha</h2>
                 <p>Cây thông 118 vật phẩm & Ngôi sao Bank Card.</p>
             </div>
+        </a>
+        <a href="christmas_code.html" class="card" style="border-color: #9b59b6;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">👨‍💻🔡</div> 
+                <h2>Hệ Lập Trình</h2>
+                <p>Cây thông xếp từ các dòng code console.log().</p>
+            </div>
+        </a>
+
+        <a href="christmas_anime.html" class="card" style="border-color: #ff9ff3;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">🌸👘</div> 
+                <h2>Hệ Anime</h2>
+                <p>Cây thông Sakura & Phong cách Waifu 2D.</p>
+            </div>
+        </a>
+
+        <a href="christmas_matrix.html" class="card" style="border-color: #00ff00;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">0️⃣1️⃣</div> 
+                <h2>Hệ Ma Trận</h2>
+                <p>Cây thông Digital Rain từ dữ liệu nhị phân.</p>
+            </div>
+        </a>
+
+        <a href="christmas_music.html" class="card" style="border-color: #00d2d3;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">🎵🎹</div> 
+                <h2>Hệ Âm Nhạc</h2>
+                <p>Cây thông Visualizer nhún nhảy theo điệu nhạc.</p>
+            </div>
+        </a>
+        <a href="christmas_cyberpunk.html" class="card" style="border-color: #00f2ea; box-shadow: 0 0 10px #00f2ea;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">🤖🌃</div> 
+                <h2>Hệ Cyberpunk</h2>
+                <p>Cây thông Neon City & Vibe tương lai 2077.</p>
+            </div>
+        </a>
+
+        <a href="christmas_pixel.html" class="card" style="border-color: #e67e22;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">👾🕹️</div> 
+                <h2>Hệ 8-Bit</h2>
+                <p>Cây thông Pixel Art phong cách Game Retro.</p>
+            </div>
+        </a>
+
+        <a href="christmas_galaxy.html" class="card" style="border-color: #6c5ce7;">
+            <div class="card-content">
+                <div class="icon" style="font-size: 3.5rem;">🌌🚀</div> 
+                <h2>Hệ Vũ Trụ</h2>
+                <p>Cây thông Tinh Vân từ các chòm sao.</p>
+            </div>
+        </a>
+    </div>
+
+    <div style="text-align: center; margin-bottom: 20px;">
+        <a href="card.html" style="color: #fff; text-decoration: none; font-size: 1.2rem; background: rgba(255,255,255,0.1); padding: 8px 15px; border-radius: 20px; border: 1px solid #d4af37;">
+            📖 Xem lại thiệp chúc
         </a>
     </div>
 
