Update split files from html to html,css,js

--- a/christmas_anime.html
+++ b/christmas_anime.html
@@ -5,119 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Hệ Anime Waifu 118</title>
     <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
-    <style>
-        /* ===== CẤU HÌNH CHUNG ===== */
-        body {
-            margin: 0;
-            /* Nền Hồng Pastel Waifu */
-            background: linear-gradient(135deg, #ff9ff3, #f368e0, #5f27cd);
-            min-height: 100vh;
-            font-family: 'Kosugi Maru', sans-serif;
-            overflow-x: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        /* Nút Menu */
-        .back-btn {
-            position: fixed; top: 20px; left: 20px;
-            background: #fff; color: #fd79a8;
-            text-decoration: none; font-weight: bold;
-            padding: 10px 20px; border-radius: 30px;
-            box-shadow: 0 5px 0 #e84393;
-            z-index: 1000;
-        }
-        .back-btn:active { transform: translateY(5px); box-shadow: none; }
-
-        /* Tiêu đề */
-        h1 {
-            color: #fff; text-shadow: 3px 3px 0 #fd79a8;
-            margin-top: 20px; font-size: 2.5rem; text-align: center;
-            z-index: 10;
-        }
-
-        /* ===== CÂY THÔNG WAIFU (GRID) ===== */
-        .waifu-tree-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 5px; /* Khoảng cách giữa các hàng */
-            padding-bottom: 50px;
-            margin-top: 20px;
-            z-index: 10;
-        }
-
-        .tree-row {
-            display: flex;
-            justify-content: center;
-            gap: 5px; /* Khoảng cách giữa các ảnh */
-        }
-
-        /* Ô chứa ảnh (Tile) */
-        .waifu-tile {
-            width: 45px; height: 45px; /* Kích thước ô vuông */
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 5px;
-            overflow: hidden;
-            border: 2px solid rgba(255, 255, 255, 0.5);
-            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            cursor: pointer;
-            position: relative;
-        }
-
-        .waifu-tile img {
-            width: 100%; height: 100%;
-            object-fit: cover;
-        }
-
-        /* Hiệu ứng Hover: Phóng to xem rõ Waifu */
-        .waifu-tile:hover {
-            transform: scale(2.5); /* Phóng to gấp 2.5 lần */
-            z-index: 100;
-            border-color: #ffeaa7;
-            box-shadow: 0 0 15px #ffeaa7;
-        }
-
-        /* Tooltip tên (Hiện khi hover) */
-        .waifu-tile::after {
-            content: attr(data-name);
-            position: absolute;
-            bottom: 0; left: 0; width: 100%;
-            background: rgba(0,0,0,0.7);
-            color: #fff;
-            font-size: 8px;
-            text-align: center;
-            opacity: 0;
-            transition: 0.2s;
-        }
-        .waifu-tile:hover::after { opacity: 1; }
-
-        /* Ngôi sao trên đỉnh */
-        .star-top {
-            font-size: 60px; color: #ffeaa7;
-            text-shadow: 0 0 20px #ffeaa7;
-            animation: spin 3s infinite linear;
-            margin-bottom: 10px;
-        }
-        @keyframes spin { 0% { transform: rotate(0deg); } 25% { transform: rotate(10deg); } 75% { transform: rotate(-10deg); } 100% { transform: rotate(0deg); } }
-
-        /* ===== HOA ANH ĐÀO RƠI ===== */
-        .sakura {
-            position: absolute; top: -10%;
-            background-color: #ffdae9; border-radius: 100% 0 100% 0;
-            opacity: 0.8; animation: fall linear infinite; pointer-events: none;
-        }
-        @keyframes fall {
-            0% { top: -10%; transform: translateX(0) rotate(0deg); }
-            100% { top: 110%; transform: translateX(100px) rotate(360deg); }
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .waifu-tile { width: 30px; height: 30px; }
-        }
-    </style>
+    <link rel="stylesheet" href="css/anime.css">
 </head>
 <body>
 
@@ -128,103 +16,6 @@
         <div class="star-top">⭐</div>
         </div>
 
-    <script>
-        // 1. DANH SÁCH ẢNH (59 TÊN TỪ HÌNH ẢNH)
-        const waifuList = [
-            "ei.jpg", "gawr_gura.jpg", "hatsune_miku.jpg", "hutao.jpg", "pandoru.jpg",
-            "shinobu.jpg", "yae_miko.jpg", "yor_forger.jpg", "kanna_kamui.jpg", "tohru.jpg",
-            "agnes_tachyon.jpg", "anya_smile.jpg", "special_week.jpg", "haru_urara.jpg", "emilia.jpg",
-            "rem.jpg", "klee.jpg", "yotsuba_nakano.jpg", "miku_nakano.jpg", "nino_nakano.jpg",
-            "ichika_nakano.jpg", "itsuki_nakano.jpg", "ina_ninomae.jpg", "herta.jpg", "kafka.jpg",
-            "megumin.jpg", "paimon.jpg", "yamada_ryo.jpg", "bocchi_the_rock.jpg", "kita_ikuyo.jpg",
-            "nijika_ijichi.jpg", "yuno_yasai.jpg", "rimuru_padoru.jpg", "aqua.jpg", "Padoru de No Game No Life.jpg",
-            "frieren_evil_smile.jpg", "frieren.jpg", "komi_san.jpg", "louise.jpg", "mahiru_shiina.jpg",
-            "senko.jpg", "zero_two.jpg", "kurumi.jpg", "siesta_.jpg", "kafuu_chino.jpg",
-            "shirakami_fubuki.jpg", "sagiri.jpg", "inugami_korone.jpg", "lauriel.jpg", "aya.jpg",
-            "helen.jpg", "sinestra.jpg", "aoi.jpg", "niconi.jpg", "himemori_luna.jpg",
-            "citlati.jpg", "salor_moon.jpg", "makima.jpg", "ackerman_mikasa.jpg"
-        ];
-
-        // 2. NHÂN ĐÔI DANH SÁCH ĐỂ ĐỦ 118 Ô
-        // (59 * 2 = 118)
-        let fullList = [...waifuList, ...waifuList];
-
-        // Hàm xáo trộn mảng (Nếu bạn muốn mỗi lần F5 là vị trí khác nhau thì bỏ comment dòng dưới)
-        // fullList.sort(() => Math.random() - 0.5); 
-
-        // 3. CẤU TRÚC CÂY THÔNG (Số lượng ô mỗi hàng)
-        // Tổng cộng các số này bằng 118
-        const treeStructure = [
-            1,  // Đỉnh
-            2,
-            3,
-            4,
-            6,
-            8,
-            10,
-            12,
-            14,
-            16,
-            18, // Tán lá rộng nhất
-            8,  // Gốc cây
-            8,  // Gốc cây
-            8   // Gốc cây
-        ];
-        
-        // Kiểm tra tổng (Debug)
-        // 1+2+3+4+6+8+10+12+14+16+18 + 24 = 118. CHUẨN!
-
-        const root = document.getElementById('treeRoot');
-        let currentIndex = 0;
-
-        // 4. VẼ CÂY
-        treeStructure.forEach(count => {
-            const row = document.createElement('div');
-            row.classList.add('tree-row');
-
-            for (let i = 0; i < count; i++) {
-                if (currentIndex < fullList.length) {
-                    const fileName = fullList[currentIndex];
-                    // Tạo tên hiển thị (bỏ .jpg và dấu _)
-                    const displayName = fileName.replace('.jpg', '').replace(/_/g, ' ');
-
-                    const tile = document.createElement('div');
-                    tile.classList.add('waifu-tile');
-                    tile.setAttribute('data-name', displayName); // Để hiện tooltip
-
-                    const img = document.createElement('img');
-                    // Đường dẫn tới thư mục pandoru
-                    img.src = `pandoru/${fileName}`; 
-                    img.alt = displayName;
-                    
-                    // Xử lý lỗi nếu ảnh không load được
-                    img.onerror = function() {
-                        this.src = 'https://via.placeholder.com/50?text=Waifu';
-                    };
-
-                    tile.appendChild(img);
-                    row.appendChild(tile);
-                    currentIndex++;
-                }
-            }
-            root.appendChild(row);
-        });
-
-        // 5. HIỆU ỨNG MƯA SAKURA
-        function createSakura() {
-            const sakura = document.createElement('div');
-            sakura.classList.add('sakura');
-            const size = Math.random() * 15 + 10 + 'px';
-            sakura.style.width = size; sakura.style.height = size;
-            sakura.style.left = Math.random() * 100 + 'vw';
-            sakura.style.animationDuration = Math.random() * 3 + 4 + 's';
-            const colors = ['#ff9ff3', '#f368e0', '#ffc3a0', '#ffffff'];
-            sakura.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-            document.body.appendChild(sakura);
-            setTimeout(() => sakura.remove(), 8000);
-        }
-        setInterval(createSakura, 200);
-
-    </script>
+    <script src="js/anime.js"></script>
 </body>
 </html>
