--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </a>
 
-        <a href="christmas_music.html" class="card" style="border-color: #00d2d3;">
+        <a href="christmas_visualizer.html" class="card" style="border-color: #00d2d3;">
             <div class="card-content">
                 <div class="icon" style="font-size: 3.5rem;">🎵🎹</div> 
                 <h2>Hệ Âm Nhạc</h2>
