--- a/christmas_matrix.html
+++ b/christmas_matrix.html
@@ -4,102 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Hệ Ma Trận Matrix</title>
-    <link rel="stylesheet" href="css/style.css">
-    <style>
-        /* ===== CẤU HÌNH CHUNG ===== */
-        body {
-            margin: 0;
-            background-color: #000;
-            color: #00ff00; /* Xanh lá Hacker */
-            font-family: 'Courier New', Courier, monospace;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        /* ===== BACKGROUND MATRIX RAIN (Mưa code nền) ===== */
-        canvas {
-            position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            z-index: 0;
-            opacity: 0.3; /* Mờ mờ để làm nền */
-        }
-
-        /* ===== CONTAINER CÂY ===== */
-        .matrix-container {
-            position: relative;
-            z-index: 10;
-            text-align: center;
-            /* Hiệu ứng bóng đổ Neon */
-            filter: drop-shadow(0 0 8px rgba(0, 255, 0, 0.6));
-            transform: scale(1.1); /* Phóng to toàn bộ cây */
-        }
-
-        /* ===== CÂY THÔNG SỐ ===== */
-        .matrix-tree {
-            font-weight: bold;
-            line-height: 1.1;
-            cursor: default;
-            font-size: 16px; /* Cỡ chữ vừa phải để cây cao */
-        }
-
-        .row {
-            white-space: pre;
-            text-shadow: 0 0 5px #00ff00;
-            animation: glitch 3s infinite alternate;
-        }
-
-        /* Hiệu ứng nhấp nháy ngẫu nhiên các dòng */
-        .row:nth-child(even) { color: #80ff80; text-shadow: 0 0 8px #fff; }
-        .row:hover { color: #fff; text-shadow: 0 0 15px #fff; transform: scale(1.1); transition: 0.2s; }
-
-        @keyframes glitch {
-            0% { opacity: 0.9; }
-            100% { opacity: 1; text-shadow: 0 0 10px #0f0, 0 0 20px #0f0; }
-        }
-
-        /* ===== GỐC CÂY ===== */
-        .trunk {
-            color: #003300;
-            text-shadow: none;
-            font-weight: 900;
-            line-height: 1;
-        }
-
-        /* ===== TIÊU ĐỀ ===== */
-        h1 {
-            font-family: 'Courier New';
-            margin-top: 30px;
-            letter-spacing: 5px;
-            font-size: 2rem;
-            color: #fff;
-            text-shadow: 0 0 10px #0f0;
-            animation: textBlink 1s infinite;
-            z-index: 10;
-        }
-
-        @keyframes textBlink { 50% { opacity: 0.5; } }
-
-        /* Nút Back */
-        .back-btn {
-            position: absolute; top: 20px; left: 20px;
-            color: #0f0; text-decoration: none; font-weight: bold;
-            border: 1px solid #0f0; padding: 10px 20px;
-            background: #000; z-index: 100;
-            box-shadow: 0 0 10px #0f0;
-        }
-        .back-btn:hover { background: #0f0; color: #000; }
-
-        /* Mobile */
-        @media (max-width: 600px) {
-            .matrix-tree { font-size: 10px; }
-            h1 { font-size: 1.5rem; }
-        }
-    </style>
+    <link rel="stylesheet" href="css/matrix.css">
 </head>
 <body>
 
@@ -113,91 +18,9 @@
         <h1>SYSTEM HACKED</h1>
     </div>
 
-    <script src="js/script.js"></script> <script>
-        /* ===== PHẦN 1: TẠO CÂY THÔNG MATRIX (AUTO GENERATE) ===== */
-        const treeContainer = document.getElementById('tree');
-        const treeHeight = 35; // ĐỘ CAO CỦA CÂY (Tăng số này để cây to hơn)
+    <script src="js/script.js"></script>
+    
+    <script src="js/matrix.js"></script>
 
-        let treeHTML = "";
-        
-        // 1. Tạo tán lá (Tam giác)
-        for (let i = 1; i <= treeHeight; i++) {
-            let rowContent = "";
-            // Số lượng ký tự tăng dần theo tầng (1, 2, 3...)
-            for (let j = 0; j < i; j++) {
-                // Random 0 hoặc 1
-                rowContent += (Math.random() > 0.5 ? "1" : "0") + " ";
-            }
-            treeHTML += `<div class="row">${rowContent}</div>`;
-        }
-
-        // 2. Tạo gốc cây
-        for (let k = 0; k < 4; k++) {
-            treeHTML += `<div class="trunk">|||</div>`;
-        }
-
-        treeContainer.innerHTML = treeHTML;
-
-        // 3. Hiệu ứng đổi số liên tục (Real-time Hacking)
-        setInterval(() => {
-            const rows = document.querySelectorAll('.row');
-            // Chọn ngẫu nhiên 5 dòng để đổi số (đỡ lag hơn đổi tất cả)
-            for(let i=0; i<10; i++) {
-                const randomRow = rows[Math.floor(Math.random() * rows.length)];
-                if(randomRow) {
-                    let txt = randomRow.innerText;
-                    let newTxt = "";
-                    for(let char of txt) {
-                        if(char === " ") newTxt += " ";
-                        else newTxt += Math.random() > 0.5 ? "1" : "0";
-                    }
-                    randomRow.innerText = newTxt;
-                    // Hiệu ứng nháy màu trắng khi đổi số
-                    randomRow.style.color = "#fff";
-                    setTimeout(() => randomRow.style.color = "", 100);
-                }
-            }
-        }, 50);
-
-
-        /* ===== PHẦN 2: BACKGROUND MATRIX RAIN (CANVAS) ===== */
-        const canvas = document.getElementById('matrixBg');
-        const ctx = canvas.getContext('2d');
-
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        const chars = "0101010101MATRIX"; // Ký tự rơi
-        const fontSize = 14;
-        const columns = canvas.width / fontSize;
-        const drops = [];
-
-        for (let x = 0; x < columns; x++) drops[x] = 1;
-
-        function drawMatrix() {
-            ctx.fillStyle = "rgba(0, 0, 0, 0.05)"; // Tạo vệt mờ
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            ctx.fillStyle = "#0F0"; // Màu chữ xanh
-            ctx.font = fontSize + "px monospace";
-
-            for (let i = 0; i < drops.length; i++) {
-                const text = chars[Math.floor(Math.random() * chars.length)];
-                ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-                if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-                    drops[i] = 0;
-                }
-                drops[i]++;
-            }
-        }
-        setInterval(drawMatrix, 33);
-
-        // Resize
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        });
-    </script>
 </body>
 </html>
