--- a/christmas_anime.html
+++ b/christmas_anime.html
@@ -10,6 +10,7 @@
 <body>
 
     <a href="index.html" class="back-btn">♥ MENU</a>
+    <button id="randomBtn" class="random-btn">🔀 RANDOM</button>
     <h1>WAIFU ELEMENT TREE</h1>
 
     <div class="waifu-tree-container" id="treeRoot">
