--- a/christmas_gacha.html
+++ b/christmas_gacha.html
@@ -10,6 +10,7 @@
 <body>
     <div id="snow-container"></div>
     <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
+    <button id="randomBtn" class="random-btn">🔀 RANDOM</button>
 
     <div class="main-container">
         <h1 class="gacha-title">ALL I WANT IS... <span style="color: #ffd700;">SSR</span></h1>
