--- a/christmas_code.html
+++ b/christmas_code.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <a href="index.html" class="nav-link nav-home">🏠 Menu</a>
+    <a href="menu.html" class="nav-link nav-home">🏠 Menu</a>
     <a href="card.html" class="nav-link nav-card">📖 Thiệp</a>
 
     <div class="container">
