--- a/christmas_galaxy.html
+++ b/christmas_galaxy.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="back-btn">🌌 Menu</a>
+    <a href="menu.html" class="back-btn">🌌 Menu</a>
     <div class="title">Cosmic Christmas</div>
     
     <canvas id="galaxy"></canvas>
