--- a/christmas_math.html
+++ b/christmas_math.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="snow-container"></div>
-    <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #333; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
+    <a href="menu.html" style="position: absolute; top: 20px; left: 20px; color: #333; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
 
     <svg viewBox="0 0 500 600">
         <polygon points="250,30 260,55 285,55 265,75 275,100 250,85 225,100 235,75 215,55 240,55" 
