--- a/christmas_anime.html
+++ b/christmas_anime.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="back-btn">♥ MENU</a>
+    <a href="menu.html" class="back-btn">♥ MENU</a>
     <button id="randomBtn" class="random-btn">🔀 RANDOM</button>
     <h1>WAIFU ELEMENT TREE</h1>
 
