--- a/christmas_cyberpunk.html
+++ b/christmas_cyberpunk.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/cyberpunk.css">
 </head>
 <body>
-    <a href="index.html" class="back-btn">&lt; SYSTEM_MENU</a>
+    <a href="menu.html" class="back-btn">&lt; SYSTEM_MENU</a>
 
     <div class="cyber-container">
         <div class="cyber-star">★</div>
