--- a/christmas_gacha.html
+++ b/christmas_gacha.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="snow-container"></div>
-    <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
+    <a href="menu.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
     <button id="randomBtn" class="random-btn">🔀 RANDOM</button>
 
     <div class="main-container">
