--- a/christmas_love.html
+++ b/christmas_love.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="snow-container"></div>
-    <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #ffeb3b; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
+    <a href="menu.html" style="position: absolute; top: 20px; left: 20px; color: #ffeb3b; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
 
     <div class="Christmas_love">
         <span>Feliz Navidad</span>
