--- a/christmas_matrix.html
+++ b/christmas_matrix.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="back-btn">&lt; SYSTEM_ROOT</a>
+    <a href="menu.html" class="back-btn">&lt; SYSTEM_ROOT</a>
 
     <canvas id="matrixBg"></canvas>
 
