--- a/christmas_moba_victory.html
+++ b/christmas_moba_victory.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/moba_tree.css">
 </head>
-<body class="victory-mode"> <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
+<body class="victory-mode"> <a href="menu.html" style="position: absolute; top: 20px; left: 20px; color: #fff; text-decoration: none; font-size: 24px; z-index: 100;">🏠 Menu</a>
 
     <div id="snow-container"></div>
     <div class="main-container">
