--- a/christmas_pixel.html
+++ b/christmas_pixel.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/pixel.css">
 </head>
 <body>
-    <a href="index.html" class="back-btn">&lt; MENU</a>
+    <a href="menu.html" class="back-btn">&lt; MENU</a>
 
     <div class="pixel-container">
         
