--- a/christmas_std.html
+++ b/christmas_std.html
@@ -82,7 +82,7 @@
 <body>
 
     <div id="snow-container"></div>
-    <a href="index.html" style="position: absolute; top: 20px; left: 20px; color: white; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
+    <a href="menu.html" style="position: absolute; top: 20px; left: 20px; color: white; text-decoration: none; font-size: 24px; z-index: 10;">🏠 Menu</a>
 
     <div class="tree-container">
         <svg viewBox="0 0 200 300" width="100%" height="100%">
