--- a/christmas_visualizer.html
+++ b/christmas_visualizer.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <a href="index.html" class="nav-link nav-home">🏠 Menu</a>
+    <a href="menu.html" class="nav-link nav-home">🏠 Menu</a>
     <a href="card.html" class="nav-link nav-card">📖 Thiệp</a>
 
     <div class="container">
