--- a/welcome.html
+++ b/welcome.html
@@ -55,7 +55,7 @@
                 setTimeout(() => {
                     // 3. QUAN TRỌNG: Dùng window.top để thoát khỏi iframe
                     // Chuyển hướng sang trang Menu (đã đổi tên thành menu.html)
-                    window.top.location.href = 'card.html';
+                    window.location.href = 'card.html';
                 }, 1000);
             } else {
                 // Rung lắc ô input nếu quên nhập tên
