--- a/card.html
+++ b/card.html
@@ -133,7 +133,7 @@
     <script src="js/script.js"></script> 
 
     <script>
-        const guestName = localStorage.getItem('guestName');
+        const guestName = sessionStorage.getItem('guestName');
         if (guestName) document.getElementById('receiver-name').textContent = guestName;
 
         // --- ĐÃ SỬA LẠI ĐƯỜNG DẪN TẠI ĐÂY ---
